<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="notification_name_low">服务通知</string>
    <string name="main_nav_title">自由、开放、平等、分享</string>
    <string name="main_nav_widgets">控件</string>
    <string name="main_nav_drawables">图形</string>
    <string name="main_nav_others">其他</string>
    <string name="main_nav_develop">开发</string>
    <string name="main_nav_report">报告错误</string>
    <string name="main_nav_contact">联系作者</string>
    <string name="main_nav_about">关于</string>
    <string name="about_label">关于</string>
    <string name="about_info">ProjectX为个人开源控件合集，旨在辅助开发、维护、更新个人所有开源控件，同时也可以用于展示所有开源控件的功能及属性。（部分不便于展示的内容则不会出现在应用中，如开发中的不稳定控件等。）</string>
    <string name="about_more">更多信息，请参考Github项目主页：</string>
    <string name="about_privacy">隐私权政策</string>
    <string name="main_widgets_gradienttabstrip">渐变底部栏</string>
    <string name="main_widgets_tagtabstrip">图片标记栏</string>
    <string name="main_widgets_indicatortabstrip">游标顶部栏</string>
    <string name="main_widgets_shapeimageview">裁剪图片视图</string>
    <string name="main_widgets_statelayout">状态布局</string>
    <string name="main_widgets_wraplayout">自换行布局</string>
    <string name="main_widgets_drawableratingbar">图片评级</string>
    <string name="main_widgets_headerfootergridview">头尾网格视图</string>
    <string name="main_widgets_multiactiontextview">文本点击</string>
    <string name="main_widgets_recyclepager">回收页视图</string>
    <string name="main_widgets_circleprogressbar">环形进度条</string>
    <string name="main_widgets_zxingscanview">条码扫描</string>
    <string name="main_widgets_smoothinputlayout">输入面板</string>
    <string name="main_widgets_multifunctionalrecyclerview">多功能回收视图</string>
    <string name="main_drawables_loading">载入图片</string>
    <string name="main_drawables_cornerdrawable">尖角框</string>
    <string name="main_drawables_frame">帧图片</string>
    <string name="main_drawables_linedrawable">横线图片</string>
    <string name="main_drawables_griddrawable">网格图片</string>
    <string name="main_drawables_textdrawable">文本图片</string>
    <string name="main_others_printer">小票打印</string>
    <string name="main_others_crypto">加密解密</string>
    <string name="main_others_ftp">文件传输</string>
    <string name="main_others_font">字体</string>
    <string name="main_others_opentype">字体文件</string>
    <string name="main_others_floating">悬浮菜单</string>
    <string name="main_develop_developing">开发中</string>
    <string name="main_develop_supergridview">拖拽网格</string>
    <string name="main_others_clipboard">剪切板</string>
    <string name="main_others_retrofit">Retrofit辅助</string>
    <string name="developing_label">开发中</string>
    <string name="gts_label">渐变底部栏</string>
    <string name="tts_label">图片标记栏</string>
    <string name="its_label">游标顶部栏</string>
    <string name="miv_label">裁剪图片视图</string>
    <string name="miv_crop_type">裁剪为圆形：</string>
    <string name="miv_height_width_scale">宽高比(100/100~100/50)：</string>
    <string name="miv_border_width">边线宽(0dp~10dp)：</string>
    <string name="miv_radius">圆角(0dp~30dp)：</string>
    <string name="miv_padding">Padding(0dp~20dp)：</string>
    <string name="miv_scaletype">ScaleType：</string>
    <string name="sl_label">状态布局</string>
    <string name="sl_change_state">状态修改：</string>
    <string name="sl_change_state_normal">普通</string>
    <string name="sl_change_state_loading">载入</string>
    <string name="sl_change_state_error">错误</string>
    <string name="sl_change_state_empty">空白</string>
    <string name="sl_change_mode">模式修改：</string>
    <string name="sl_change_mode_drawable">图片</string>
    <string name="sl_change_mode_view">视图</string>
    <string name="wl_label">自换行布局</string>
    <string name="wl_text">文本框</string>
    <string name="wl_text_gravity">布局：</string>
    <string name="wl_gravity_top">上</string>
    <string name="wl_gravity_center">中</string>
    <string name="wl_gravity_bottom">下</string>
    <string name="wl_text_horizontal">水平间距（0dp～30dp）：</string>
    <string name="wl_text_vertical">垂直间距（0dp～30dp）：</string>
    <string name="drb_label">图片评级</string>
    <string name="drb_gravity">布局：</string>
    <string name="drb_manually">可手动控制：</string>
    <string name="drb_only_item_touchable">仅子项内部响应触摸事件：</string>
    <string name="drb_max">最大值(6~10)：</string>
    <string name="drb_min">子项不得少于个数(0~6)：</string>
    <string name="hfg_label">头尾网格视图</string>
    <string name="hfg_header_view">头View</string>
    <string name="hfg_header_item">头Item</string>
    <string name="hfg_footer_view">尾View</string>
    <string name="hfg_footer_item">尾Item</string>
    <string name="hfg_item_number">子项数目：</string>
    <string name="hfg_item">Item %1$d</string>
    <string name="hfg_header">Header %1$d</string>
    <string name="hfg_footer">Footer %1$d</string>
    <string name="hfg_hv">Header View %1$d</string>
    <string name="hfg_fv">Footer View %1$d</string>
    <string name="mat_label">文本点击</string>
    <string name="mat_content">Android最初由安迪·鲁宾（Andy Rubin）等人开发制作，最初开发这个系统的目的是创建一个数码相机的先进操作系统；但是后来发现市场需求不够大，加上智能手机市场快速成长，于是Android被改造为一款面向智能手机的操作系统。于2005年7月11日被美国科技企业Google收购。2007年11月，Google与84家硬件制造商、软件开发商及电信营运商成立开放手持设备联盟来共同研发改良Android，随后，Google以Apache免费开放源代码许可证的授权方式，发布了Android的源代码，让生产商推出搭载Android的智能手机，Android后来更逐渐拓展到平板电脑及其他领域上。\n2010年末数据显示，仅正式推出两年的Android操作系统在市场占有率上已经超越称霸逾十年的诺基亚Symbian系统，成为全球第一大智能手机操作系统。\n在2014年Google I/O开发者大会上Google宣布过去30天里有10亿台活跃的安卓设备，相较于2013年6月则是5.38亿。</string>
    <string name="mat_toast">点击整个文本</string>
    <string name="rp_label">回收页视图</string>
    <string name="rp_title_page">页面数目</string>
    <string name="rp_title_offset">计数偏移</string>
    <string name="rp_add_exchange">奇偶互换</string>
    <string name="cpb_label">环形进度条</string>
    <string name="cpb_bar_top">速度</string>
    <string name="cpb_bar_bottom">km/s</string>
    <string name="cpb_bar_loading">载入</string>
    <string name="cpb_gravity">布局：</string>
    <string name="cpb_radius">进度条半径：（100dp～200dp）</string>
    <string name="cpb_start_angle">进度起始角度：</string>
    <string name="cpb_sweep_angle">进度扫描角度：</string>
    <string name="cpb_background_size">背景尺寸大小：（0dp～30dp）</string>
    <string name="cpb_progress_size">进度尺寸大小：（0dp～30dp）</string>
    <string name="cpb_progress_progress">进度值：(0～810)</string>
    <string name="cpb_gradient">进度渐变色：</string>
    <string name="cpb_visibility">进度刻度可见状态：</string>
    <string name="cpb_dial_gap">刻度表盘间距：（0dp～10dp）</string>
    <string name="cpb_dial_angle">刻度角度：(0～10)</string>
    <string name="cpb_dial_height">刻度高度：(0dp～20dp)</string>
    <string name="cpb_dial_width">刻度宽度：(0dp～5dp)</string>
    <string name="cpb_dial_special_unit">特殊刻度单位：(0～10)</string>
    <string name="cpb_dial_special_height">特殊刻度高度：(0dp～20dp)</string>
    <string name="cpb_dial_special_width">特殊刻度宽度：(0dp～5dp)</string>
    <string name="cpb_dial_gravity">刻度布局：</string>
    <string name="cpb_special_dial_value">显示特殊刻度值：</string>
    <string name="cpb_special_dial_value_gap">特殊刻度值与特殊刻度间距：（0dp～10dp）</string>
    <string name="cpb_special_dial_value_text_size">特殊刻度值文字大小：（5sp～15sp）</string>
    <string name="cpb_progress_value">显示进度值：</string>
    <string name="cpb_progress_value_text_size">进度值文字大小：（5sp～15sp）</string>
    <string name="cpb_top_text_gap">顶部文字与进度值间距：（0dp～50dp）</string>
    <string name="cpb_top_text_size">顶部文字大小：（10sp～40sp）</string>
    <string name="cpb_bottom_text_gap">底部文字与进度值间距：（0dp～50dp）</string>
    <string name="cpb_bottom_text_size">底部文字大小：（10sp～40sp）</string>
    <string name="cpb_scale_type">缩放模式：</string>
    <string name="cpb_progress_duration">进度动画时长：（100～5000）</string>
    <string name="cpb_progress_mode">载入模式开关：</string>
    <string name="cpb_loading_start_angle">载入起始角度：</string>
    <string name="cpb_loading_sweep_angle">载入扫描角度：</string>
    <string name="cpb_loading_duration">载入动画时长：（100～5000）</string>
    <string name="cpb_repeat_mode">载入动画是否逆转：</string>
    <string name="cpb_loading_draw_other">载入模式下绘制其他内容：</string>
    <string name="cpb_progress_animator">进度条动画</string>
    <string name="zsv_label">条码扫描</string>
    <string name="zsv_error">很遗憾，相机出现问题。你可能需要重启设备。</string>
    <string name="sil_label">输入面板</string>
    <string name="sil_voice">按住 说话</string>
    <string name="sil_picture">图片</string>
    <string name="sil_camera">拍照</string>
    <string name="ld_label">载入图片</string>
    <string name="cnd_label">尖角框</string>
    <string name="cnd_text">尖角对话框图片，主要用于聊天对话框背景。支持各个方向，同时支持箭头剧中与靠边、内容圆角、箭头圆角、及绘制边线。</string>
    <string name="cnd_direction">朝向：</string>
    <string name="cnd_location">位置：</string>
    <string name="cnd_corner_width">尖角宽度（20dp～30dp）：</string>
    <string name="cnd_corner_height">尖角高度（10dp～20dp）：</string>
    <string name="cnd_corner_radius">尖角圆角（0px～5px）：</string>
    <string name="cnd_corner_margin">尖角边距（0dp～15dp）：</string>
    <string name="cnd_bezier">贝塞尔尖角（0～1）：</string>
    <string name="cnd_stoke">描边线宽（0px～20px）：</string>
    <string name="cnd_radius">内容圆角（0dp～10dp）：</string>
    <string name="cnd_padding">内容间隔（0dp～10dp）：</string>
    <string name="frame_label">帧图片</string>
    <string name="lid_label">横线图片</string>
    <string name="lid_line_size">线条粗细（1px～10px）：</string>
    <string name="grd_label">网格图片</string>
    <string name="grd_number_row">行数目（1～6）：</string>
    <string name="grd_number_column">列数目（1～6）：</string>
    <string name="grd_gap">行列间隔（1dp～10dp）：</string>
    <string name="td_label">文本图片</string>
    <string name="td_scale">文字大小自动缩放：</string>
    <string name="td_content">图</string>
    <string name="printer_label">小票打印</string>
    <string name="printer_type">打印机类型：</string>
    <string name="printer_ip">填写IP信息</string>
    <string name="printer_bluetooth">选择蓝牙设备</string>
    <string name="printer_qr">二维码内容：</string>
    <string name="printer_qr_hint">输入内容以生成特定二维码</string>
    <string name="printer_ip_hint">IP地址</string>
    <string name="printer_port_hint">端口</string>
    <string name="printer_port_text">9100</string>
    <string name="printer_type_80">80mm</string>
    <string name="printer_type_58">58mm</string>
    <string name="printer_image_enable">图片开关：</string>
    <string name="printer_image_width">图片宽度：</string>
    <string name="printer_image_width_default">300</string>
    <string name="printer_image_height_parting">图片高度分段像素值：</string>
    <string name="printer_image_height_parting_default">255</string>
    <string name="printer_image_height_parting_error">图片高度分段像素值最大不能超过255</string>
    <string name="printer_test_ip">测试固定IP打印机</string>
    <string name="printer_test_bluetooth">测试蓝牙打印机</string>
    <string name="printer_cancel">取消</string>
    <string name="printer_edit_toast_1">请填写打印机IP地址</string>
    <string name="printer_edit_toast_2">请正确填写打印机IP地址</string>
    <string name="printer_edit_toast_3">请填写打印机端口号</string>
    <string name="printer_edit_toast_4">请正确填写打印机端口号，0～65535</string>
    <string name="printer_bluetooth_not_support">不支持蓝牙</string>
    <string name="printer_bluetooth_dlg_open">打开蓝牙，以便连接蓝牙打印设备。</string>
    <string name="printer_bluetooth_dlg_close">是否需要关闭蓝牙？</string>
    <string name="printer_allow">"允许"</string>
    <string name="printer_deny">"拒绝"</string>
    <string name="printer_yes">"是"</string>
    <string name="printer_no">"否"</string>
    <string name="printer_bluetooth_dlg_close_error">由于某些原因导致应用关闭蓝牙失败，请到系统设置中自行关闭</string>
    <string name="printer_test_start">开始执行打印&#8230;</string>
    <string name="printer_test_message_0">开始测试&#8230;</string>
    <string name="printer_test_message_1">生成测试页面数据&#8230;</string>
    <string name="printer_test_message_2">生成数据成功，开始创建Socket连接&#8230;</string>
    <string name="printer_test_message_3">创建Socket成功，开始发送测试数据&#8230;</string>
    <string name="ftp_auto_change_port">自动修正端口</string>
    <string name="ftp_path">目录：</string>
    <string name="ftp_open">打开</string>
    <string name="ftp_close">关闭</string>
    <string name="retrofit_label">Retrofit辅助</string>
    <string name="retrofit_test">测试</string>
    <string name="retrofit_input_hint">北京</string>
</resources>