<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".business.drawables.cornerdrawable.CornerDrawableActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/cnd_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/cnd_label" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@android:color/white">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/cnd_tv_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:maxWidth="200dp"
            android:text="@string/cnd_text"
            android:textSize="18sp" />

    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/cnd_direction"
                android:textColor="#ff666666"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/cnd_sp_direction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:entries="@array/cnd_direction"
                android:paddingBottom="8dp"
                android:paddingTop="8dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/cnd_location"
                android:textColor="#ff666666"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/cnd_sp_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:entries="@array/cnd_location"
                android:paddingBottom="8dp"
                android:paddingTop="8dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/cnd_corner_width"
                android:textColor="#ff666666"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/cnd_sb_width"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="10" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/cnd_corner_height"
                android:textColor="#ff666666"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/cnd_sb_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="10" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/cnd_corner_margin"
                android:textColor="#ff666666"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/cnd_sb_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="15" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/cnd_bezier"
                android:textColor="#ff666666"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/cnd_sb_bezier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/cnd_stoke"
                android:textColor="#ff666666"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/cnd_sb_stoke"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="20" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/cnd_radius"
                android:textColor="#ff666666"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/cnd_sb_radius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="10" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/cnd_padding"
                android:textColor="#ff666666"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/cnd_sb_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="10" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>