<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".business.drawables.griddrawable.GridDrawableActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/grd_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/grd_label" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/lrd_iv_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </FrameLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/grd_number_row"
        android:textColor="#ff666666"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/grd_sb_number_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="5" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/grd_number_column"
        android:textColor="#ff666666"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/grd_sb_number_column"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="5" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/grd_gap"
        android:textColor="#ff666666"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/grd_sb_gap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:max="9" />

</LinearLayout>