<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".business.others.retrofithelper.RetrofitActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/retrofit_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/retrofit_label" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/main_btn_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:onClick="test"
        android:text="@string/retrofit_test"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/retrofit_toolbar" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/main_edt_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/retrofit_input_hint"
        app:layout_constraintBottom_toBottomOf="@id/main_btn_test"
        app:layout_constraintEnd_toStartOf="@id/main_btn_test"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/main_btn_test" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_edt_input">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/main_tv_output"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
